--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@parcel/transformer-webmanifest": "^2.12.0",
     "parcel": "^2.12.0"
   },
-  "source": "src/index.html",
+  "source": "index.html",
   "scripts": {
     "dev": "parcel --dist-dir ./dist --no-cache",
     "build": "parcel build --dist-dir ./dist --no-source-maps --no-cache --public-url ./"
