--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@parcel/packager-raw-url": "^2.12.0",
     "@parcel/transformer-webmanifest": "^2.12.0",
+    "@types/wanakana": "^5.3.0",
     "parcel": "^2.12.0"
   },
   "source": "index.html",
